--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preset": "ts-jest",
     "moduleFileExtensions": [
       "ts",
+      "tsx",
       "js"
     ],
     "testMatch": [
@@ -28,15 +29,13 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "@svgr/parcel-plugin-svgr": "^5.1.0",
-    "@types/jest": "^26.0.9",
+    "@types/jest": "^26.0.22",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
-    "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reset.css": "^2.0.2",
-    "sass": "^1.26.11",
-    "typescript": "^3.9.7"
+    "sass": "^1.26.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -45,12 +44,15 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
     "babel-core": "^6.26.3",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.1",
-    "jest": "^25.3.0"
+    "jest": "^26.6.3",
+    "parcel-bundler": "^1.12.4",
+    "ts-jest": "^26.5.4",
+    "typescript": "^3.9.7"
   },
   "author": "Kevin Nayar"
 }
